<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMatchPairsMemoryGame"
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:gravity="center"
            android:textSize="40sp"
            android:text="@string/MatchPairsMemoryGame" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSinglePlayermMode"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/Yellow"
            android:text="@string/SinglePlayermMode"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/Yellow"
            android:text="@string/PlayWithAIMode" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivOnePlayerGames"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:layout_weight="1"
                android:onClick="openSinglePlayermModeActivity"
                app:srcCompat="@drawable/oneplayergamesymbol"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/ivPlayWithAI"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="openPlayWithAIActivity"
                app:srcCompat="@drawable/aivsplayer"
                />
        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGameRanking"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/Yellow"
            android:text="@string/GameRanking" />

        <TextView
            android:id="@+id/tvYourRecords"
            android:layout_width="match_parent"
            android:layout_height="83dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@color/Yellow"
            android:text="@string/YourRecords" />

    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivGameRanking"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="openGameRankingActivity"
                app:srcCompat="@drawable/gamerankingicon"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/ivYourRecods"
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_weight="1"
                android:onClick="openYourRecordsActivity"
                app:srcCompat="@drawable/yourrecods" />
        </LinearLayout>



    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>